--- a/cams-fireworks.html
+++ b/cams-fireworks.html
@@ -63,8 +63,8 @@
 <div class="cam" id="cam2">
   <video id="video2" controls muted autoplay></video>
 </div>
-<div class="cam" id="cam3">Unavailable</div>
-<div class="cam" id="cam4">Unavailable</div>
+<div class="cam" id="cam3">Kelowna Canada Day</div>
+<div class="cam" id="cam4">Fireworks begin at: 10:00pm or 2200</div>
 
 <a href="index.html" class="btn-back">🏠 Back to Home</a>
 
