--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     if (diffMs <= tenMinutes && diffMs > 0) {
       showPopup(`
         <h2>🎆 Fireworks are happening soon!</h2>
-        <p>Please switch to the <a href="cams-fireworks.html">Fireworks Cams</a> to watch live.</p>
+        <p>Please switch to the <a href="/cams-fireworks">Fireworks Cams</a> to watch live.</p>
       `);
     } else if (diffMs <= 0 && diffMs > -60 * 60 * 1000) {
       showPopup(`
