--- a/cams-fireworks/cam1.html
+++ b/cams-fireworks/cam1.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 
-<iframe id="cam" src="https://api.wetmet.net/widgets/stream/frame.php?uid=780206ceb4e617dd8d9ae127016449ad&width=1920px&height=1080px" allowfullscreen loading="lazy"></iframe>
+<iframe id="cam" src="https://api.wetmet.net/widgets/stream/frame.php?uid=780206ceb4e617dd8d9ae127016449ad&width=100%&height=100%" allowfullscreen loading="lazy"></iframe>
 
 <a href="/kelowna-canadaday/cams-fireworks/" class="btn-back">← Fireworks Center</a>
 
