--- a/cams-fireworks/index.html
+++ b/cams-fireworks/index.html
@@ -89,9 +89,9 @@
 </head>
 <body>
 
-<iframe id="cam1" src="https://api.wetmet.net/widgets/stream/frame.php?uid=780206ceb4e617dd8d9ae127016449ad&width=900px&height=440px" allowfullscreen loading="lazy"></iframe>
+<iframe id="cam1" src="https://api.wetmet.net/widgets/stream/frame.php?uid=780206ceb4e617dd8d9ae127016449ad&width=900px&height=440px" loading="lazy"></iframe>
 
-<iframe id="cam2" src="https://api.wetmet.net/widgets/stream/frame.php?uid=afea76ff593e6c299a137a6bbac1d64c&width=900px&height=440px" allowfullscreen loading="lazy"></iframe>
+<iframe id="cam2" src="https://api.wetmet.net/widgets/stream/frame.php?uid=afea76ff593e6c299a137a6bbac1d64c&width=900px&height=440px" loading="lazy"></iframe>
 
 <div class="unavailable">
   <h5>🎆 Click a button to view a camera fullscreen:</h5>
@@ -102,7 +102,7 @@
   </div>
 </div>
 
-<iframe id="cam3" src="https://api.wetmet.net/widgets/stream/frame.php?uid=10a5f30af3f5bcdff6ba58b6efd078b9&width=900px&height=440px" allowfullscreen loading="lazy"></iframe>
+<iframe id="cam3" src="https://api.wetmet.net/widgets/stream/frame.php?uid=10a5f30af3f5bcdff6ba58b6efd078b9&width=900px&height=440px" loading="lazy"></iframe>
 
 <a href="/kelowna-canadaday/index.html" class="btn-back">🏠 Back to Firework Center</a>
 
