--- a/cams-fireworks/index.html
+++ b/cams-fireworks/index.html
@@ -7,29 +7,26 @@
     html, body {
       margin: 0;
       padding: 0;
-      height: 100%;
-      width: 100%;
-      overflow: hidden;
       background: black;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
       font-family: Arial, sans-serif;
     }
 
-    .cam-wrapper {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      overflow: hidden;
+    .grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      height: 100vh;
+      width: 100vw;
+      gap: 0;
     }
 
-    .cam-wrapper iframe {
-      width: 1080px;
-      height: 800px;
-      border: none;
-      object-fit: cover;
+    iframe {
+      margin: auto;
+      background: black;
       display: block;
+      border: none;
+      width: 100%;
+      height: 100%;
     }
 
     .unavailable {
@@ -83,37 +80,46 @@
 </head>
 <body>
 
-<!-- Cam 1 -->
-<div class="cam-wrapper">
-  <iframe id="cam1" src="https://api.wetmet.net/widgets/stream/frame.php?uid=780206ceb4e617dd8d9ae127016449ad&width=1080px&height=800px" allowfullscreen loading="lazy"></iframe>
+<div class="grid">
+
+  <iframe id="cam1" loading="lazy" allowfullscreen></iframe>
+
+  <iframe id="cam2" loading="lazy" allowfullscreen></iframe>
+
+  <div class="unavailable">
+    <div>Camera Unavailable</div>
+    <a href="/kelowna-canadaday/cams-fireworks/cam1.html" target="_self">🔎 View Cam 1 Fullscreen</a>
+    <a href="/kelowna-canadaday/cams-fireworks/cam2.html" target="_self">🔎 View Cam 2 Fullscreen</a>
+    <a href="/kelowna-canadaday/cams-fireworks/cam3.html" target="_self">🔎 View Cam 3 Fullscreen</a>
+  </div>
+
+  <iframe id="cam4" loading="lazy" allowfullscreen></iframe>
+
 </div>
 
-<!-- Cam 2 -->
-<div class="cam-wrapper">
-  <iframe id="cam2" src="https://api.wetmet.net/widgets/stream/frame.php?uid=afea76ff593e6c299a137a6bbac1d64c&width=1080px&height=800px" allowfullscreen loading="lazy"></iframe>
-</div>
-
-<!-- Cam 3 Unavailable -->
-<div class="unavailable">
-  <a href="/kelowna-canadaday/cams-fireworks/cam1.html" target="_self">🔎 View Cam 1 Fullscreen</a>
-  <a href="/kelowna-canadaday/cams-fireworks/cam2.html" target="_self">🔎 View Cam 2 Fullscreen</a>
-  <a href="/kelowna-canadaday/cams-fireworks/cam3.html" target="_self">🔎 View Cam 3 Fullscreen</a>
-</div>
-
-<!-- Cam 4 -->
-<div class="cam-wrapper">
-  <iframe id="cam4" src="https://api.wetmet.net/widgets/stream/frame.php?uid=10a5f30af3f5bcdff6ba58b6efd078b9&width=1080px&height=800px" allowfullscreen loading="lazy"></iframe>
-</div>
-
-<!-- Back Button -->
 <a href="/kelowna-canadaday/" class="btn-back">🏠 Fireworks Center</a>
 
 <script>
+  // Your width and height variables
+  var width = '900px';
+  var height = '440px';
+
+  // Base URLs for cams
+  var cam1Base = "https://api.wetmet.net/widgets/stream/frame.php?uid=780206ceb4e617dd8d9ae127016449ad";
+  var cam2Base = "https://api.wetmet.net/widgets/stream/frame.php?uid=afea76ff593e6c299a137a6bbac1d64c";
+  var cam4Base = "https://api.wetmet.net/widgets/stream/frame.php?uid=10a5f30af3f5bcdff6ba58b6efd078b9";
+
+  // Build full URLs with width & height parameters
+  document.getElementById("cam1").src = cam1Base + "&width=" + width + "&height=" + height;
+  document.getElementById("cam2").src = cam2Base + "&width=" + width + "&height=" + height;
+  document.getElementById("cam4").src = cam4Base + "&width=" + width + "&height=" + height;
+
+  // Reload cams every 5 minutes
   ['cam1','cam2','cam4'].forEach(id => {
     const iframe = document.getElementById(id);
     setInterval(() => {
       iframe.src = iframe.src;
-    }, 300000); // refresh every 5 minutes
+    }, 300000);
   });
 </script>
 
