--- a/cams-fireworks/index.html
+++ b/cams-fireworks/index.html
@@ -87,17 +87,17 @@
   <iframe id="cam2" loading="lazy" allowfullscreen></iframe>
 
   <div class="unavailable">
-    <div>Camera Unavailable</div>
-    <a href="/kelowna-canadaday/cams-fireworks/cam1.html" target="_self">🔎 View Cam 1 Fullscreen</a>
-    <a href="/kelowna-canadaday/cams-fireworks/cam2.html" target="_self">🔎 View Cam 2 Fullscreen</a>
-    <a href="/kelowna-canadaday/cams-fireworks/cam3.html" target="_self">🔎 View Cam 3 Fullscreen</a>
+    <div>Welcome to the Fireworks Center!</div>
+    <div>Select the camera you want to watch or watch</div>
+    <div>the ones on screen.</div>
+    <a href="/kelowna-canadaday/cams-fireworks/cam1.html" target="_self">🔎 View Cam 1</a>
+    <a href="/kelowna-canadaday/cams-fireworks/cam2.html" target="_self">🔎 View Cam 2</a>
+    <a href="/kelowna-canadaday/cams-fireworks/cam3.html" target="_self">🔎 View Cam 3</a>
   </div>
 
   <iframe id="cam4" loading="lazy" allowfullscreen></iframe>
 
 </div>
-
-<a href="/kelowna-canadaday/" class="btn-back">🏠 Fireworks Center</a>
 
 <script>
   // Your width and height variables
