--- a/cams-fireworks/index.html
+++ b/cams-fireworks/index.html
@@ -82,9 +82,9 @@
 
 <div class="grid">
 
-  <iframe id="cam1" loading="lazy" allowfullscreen></iframe>
+  <iframe id="cam1" loading="lazy"></iframe>
 
-  <iframe id="cam2" loading="lazy" allowfullscreen></iframe>
+  <iframe id="cam2" loading="lazy"></iframe>
 
   <div class="unavailable">
     <div>Welcome to the Fireworks Center!</div>
@@ -95,7 +95,7 @@
     <a href="/kelowna-canadaday/cams-fireworks/cam3.html" target="_self">🔎 View Cam 3</a>
   </div>
 
-  <iframe id="cam4" loading="lazy" allowfullscreen></iframe>
+  <iframe id="cam4" loading="lazy"></iframe>
 
 </div>
 
