--- a/cams-fireworks/index.html
+++ b/cams-fireworks/index.html
@@ -27,6 +27,7 @@
       border: none;
       width: 100%;
       height: 100%;
+      align-items: center;
     }
 
     .unavailable {
@@ -102,7 +103,7 @@
 <script>
   // Your width and height variables
   var width = '900px';
-  var height = '440px';
+  var height = '545px';
 
   // Base URLs for cams
   var cam1Base = "https://api.wetmet.net/widgets/stream/frame.php?uid=780206ceb4e617dd8d9ae127016449ad";
