--- a/cams-fireworks/index.html
+++ b/cams-fireworks/index.html
@@ -96,14 +96,14 @@
     <a href="/kelowna-canadaday/cams-fireworks/cam3.html" target="_self">🔎 View Cam 3</a>
   </div>
 
-  <iframe id=cam4 allowfullscreen="false" frameborder="0" height="440px" src="https://g1.ipcamlive.com/player/player.php?alias=61268c83a557c" width="900px"></iframe>
+  <iframe id=cam4 allowfullscreen="false" autoplay="true" frameborder="0" height="440px" src="https://g1.ipcamlive.com/player/player.php?alias=61268c83a557c" width="900px"></iframe>
 
 </div>
 
 <script>
   // Your width and height variables
   var width = '900px';
-  var height = '545px';
+  var height = '540px';
 
   // Base URLs for cams
   var cam1Base = "https://api.wetmet.net/widgets/stream/frame.php?uid=780206ceb4e617dd8d9ae127016449ad";
