--- a/cams-fireworks/cam3.html
+++ b/cams-fireworks/cam3.html
@@ -41,16 +41,9 @@
 </head>
 <body>
 
-<iframe id="cam" src="https://api.wetmet.net/widgets/stream/frame.php?uid=10a5f30af3f5bcdff6ba58b6efd078b9&width=1080px&height=800px" allowfullscreen loading="lazy"></iframe>
-
+<iframe allowfullscreen="0" frameborder="0" height="450px" src="https://g1.ipcamlive.com/player/player.php?alias=61268c83a557c" width="800px"></iframe>
+  
 <a href="/kelowna-canadaday/cams-fireworks/" class="btn-back">← Fireworks Center</a>
-
-<script>
-  const iframe = document.getElementById("cam");
-  setInterval(() => {
-    iframe.src = iframe.src;
-  }, 300000);
-</script>
 
 </body>
 </html>
