--- a/cams-fireworks/televisonversion.html
+++ b/cams-fireworks/televisonversion.html
@@ -129,12 +129,14 @@
 
   <div class="unavailable">
     <div>Welcome to the Fireworks Center!</div>
-    <div class="tonic-cd-countdown-6955 tonic-cd-style-3">
+    <div class="tonic-cd-countdown-6955">
       <div class="tonic-cd-hours-6955"></div>
       <div class="tonic-cd-minutes-6955"></div>
       <div class="tonic-cd-seconds-6955"></div>
     </div>
   </div>
+  <script src="https://cdn.logwork.com/widget/countdown.js"></script>
+  <a href="https://logwork.com/countdown-timer" class="countdown-timer" data-timezone="America/Vancouver" data-date="2025-07-01 22:00">Countdown Timer</a>
 
   <iframe id=cam4 allowfullscreen="false" autoplay= frameborder="0" height="440px" src="https://g1.ipcamlive.com/player/player.php?alias=61268c83a557c" width="900px"></iframe>
 
