--- a/cams-fireworks/televisonversion.html
+++ b/cams-fireworks/televisonversion.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Kelowna Fireworks Center</title>
+  <title>TeleMode</title>
   <style>
     html, body {
       margin: 0;
@@ -134,9 +134,10 @@
       <div class="tonic-cd-minutes-6955"></div>
       <div class="tonic-cd-seconds-6955"></div>
     </div>
-  </div>
   <script src="https://cdn.logwork.com/widget/countdown.js"></script>
   <a href="https://logwork.com/countdown-timer" class="countdown-timer" data-timezone="America/Vancouver" data-date="2025-07-01 22:00">Countdown Timer</a>
+  </div>
+
 
   <iframe id=cam4 allowfullscreen="false" autoplay= frameborder="0" height="440px" src="https://g1.ipcamlive.com/player/player.php?alias=61268c83a557c" width="900px"></iframe>
 
