--- a/cams-fireworks/televisonversion.html
+++ b/cams-fireworks/televisonversion.html
@@ -134,8 +134,8 @@
       <div class="tonic-cd-minutes-6955"></div>
       <div class="tonic-cd-seconds-6955"></div>
     </div>
-  <script src="https://cdn.logwork.com/widget/countdown.js"></script>
-  <a href="https://logwork.com/countdown-timer" class="countdown-timer" data-timezone="America/Vancouver" data-date="2025-07-01 22:00">Countdown Timer</a>
+  <script src="https://cdn.logwork.com/widget/text.js"></script>
+  <a href="https://logwork.com/current-time-in-kelowna-canada-british-columbia" class="clock-widget-text" data-timezone="America/Vancouver" data-language="en">Kelowna, Canada</a>
   </div>
 
 
